Fixed gap above Footer

--- a/styles/home.less
+++ b/styles/home.less
@@ -140,6 +140,7 @@ footer {
     color:#ddd;
     min-height:100px;
     margin-right: -15px;
+    margin-top: 0px;
 }
 
 header {
